git commit will reduce maps search bar to fit mobile devices and prevent overflow

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -160,7 +160,7 @@ body {
     margin-left: 12px;
     padding: 0 11px 0 13px;
     text-overflow: ellipsis;
-    width: 400px;
+    /* width: 400px; */
 }
 
 #pac-input:focus {
